--- a/keystrokes/package.json
+++ b/keystrokes/package.json
@@ -2,6 +2,9 @@
   "name": "keystrokes",
   "version": "0.1.0",
   "private": true,
+  "devDependencies": {
+    "prettier": "^1.13.7"
+  },
   "dependencies": {
     "react": "^16.4.1",
     "react-dom": "^16.4.1",
@@ -12,5 +15,14 @@
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
-  }
+  },
+	"prettier": {
+		"useTabs": true,
+		"tabWidth": 4,
+		"semi": true,
+		"singleQuote": true,
+		"trailingComma": "es5",
+		"jsxBracketSameLine": false,
+		"proseWrap": "never"
+	}
 }
