--- a/keystrokes/package.json
+++ b/keystrokes/package.json
@@ -6,6 +6,7 @@
     "prettier": "^1.13.7"
   },
   "dependencies": {
+    "firebase": "^5.2.0",
     "react": "^16.4.1",
     "react-dom": "^16.4.1",
     "react-scripts": "1.1.4"
@@ -16,13 +17,13 @@
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
   },
-	"prettier": {
-		"useTabs": true,
-		"tabWidth": 4,
-		"semi": true,
-		"singleQuote": true,
-		"trailingComma": "es5",
-		"jsxBracketSameLine": false,
-		"proseWrap": "never"
-	}
+  "prettier": {
+    "useTabs": true,
+    "tabWidth": 4,
+    "semi": true,
+    "singleQuote": true,
+    "trailingComma": "es5",
+    "jsxBracketSameLine": false,
+    "proseWrap": "never"
+  }
 }
