--- a/keystrokes/package.json
+++ b/keystrokes/package.json
@@ -3,6 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "devDependencies": {
+    "enzyme": "^3.7.0",
+    "enzyme-adapter-react-16": "^1.7.0",
     "jest": "^23.6.0",
     "prettier": "^1.13.7"
   },
