--- a/keystrokes/package.json
+++ b/keystrokes/package.json
@@ -12,8 +12,10 @@
   },
   "dependencies": {
     "firebase": "^5.2.0",
+    "firebaseui": "^3.4.1",
     "react": "^16.4.1",
     "react-dom": "^16.4.1",
+    "react-routes": "^0.2.6",
     "react-scripts": "1.1.4"
   },
   "scripts": {
@@ -32,7 +34,11 @@
     "proseWrap": "never"
   },
   "jest": {
-    "setupFiles": ["./src/setupTests.js"],
-    "snapshotSerializers": ["enzyme-to-json/serializer"]
+    "setupFiles": [
+      "./src/setupTests.js"
+    ],
+    "snapshotSerializers": [
+      "enzyme-to-json/serializer"
+    ]
   }
 }
