--- a/keystrokes/package.json
+++ b/keystrokes/package.json
@@ -16,6 +16,7 @@
     "prop-types": "^15.6.2",
     "react": "^16.4.1",
     "react-dom": "^16.4.1",
+    "react-firebaseui": "^3.1.2",
     "react-routes": "^0.2.6",
     "react-scripts": "1.1.4"
   },
