--- a/keystrokes/package.json
+++ b/keystrokes/package.json
@@ -17,6 +17,7 @@
     "react": "^16.4.1",
     "react-dom": "^16.4.1",
     "react-firebaseui": "^3.1.2",
+    "react-router-dom": "^5.0.1",
     "react-routes": "^0.2.6",
     "react-scripts": "1.1.4"
   },
