--- a/keystrokes/package.json
+++ b/keystrokes/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "firebase": "^5.2.0",
     "firebaseui": "^3.4.1",
+    "node-sass": "^4.12.0",
     "prop-types": "^15.6.2",
     "react": "^16.4.1",
     "react-dom": "^16.4.1",
