--- a/keystrokes/package.json
+++ b/keystrokes/package.json
@@ -11,6 +11,7 @@
 		"prettier": "^1.13.7"
 	},
 	"dependencies": {
+		"@material-ui/core": "^4.2.0",
 		"firebase": "^5.2.0",
 		"firebaseui": "^3.4.1",
 		"prop-types": "^15.6.2",
