--- a/keystrokes/package.json
+++ b/keystrokes/package.json
@@ -7,6 +7,12 @@
 		"enzyme": "^3.7.0",
 		"enzyme-adapter-react-16": "^1.7.0",
 		"enzyme-to-json": "^3.3.4",
+		"eslint": "^6.8.0",
+		"eslint-config-standard": "^14.1.0",
+		"eslint-plugin-import": "^2.20.0",
+		"eslint-plugin-node": "^11.0.0",
+		"eslint-plugin-promise": "^4.2.1",
+		"eslint-plugin-standard": "^4.0.1",
 		"jest": "^23.6.0",
 		"prettier": "^1.13.7"
 	},
