--- a/keystrokes/package.json
+++ b/keystrokes/package.json
@@ -23,6 +23,7 @@
 		"firebase": "^5.2.0",
 		"firebaseui": "^3.4.1",
 		"immutability-helper": "^3.0.1",
+		"lodash": "^4.17.15",
 		"prop-types": "^15.6.2",
 		"react": "^16.8.0",
 		"react-dom": "^16.8.0",
