--- a/keystrokes/package.json
+++ b/keystrokes/package.json
@@ -28,6 +28,8 @@
 		"react": "^16.8.0",
 		"react-dom": "^16.8.0",
 		"react-firebaseui": "^3.1.2",
+		"react-html-parser": "^2.0.2",
+		"react-quill": "^1.3.3",
 		"react-router-dom": "^5.0.1",
 		"react-routes": "^0.2.6",
 		"react-scripts": "1.1.4"
