--- a/keystrokes/package.json
+++ b/keystrokes/package.json
@@ -3,6 +3,7 @@
 	"version": "0.1.0",
 	"private": true,
 	"devDependencies": {
+		"@testing-library/react": "^10.4.9",
 		"babel-jest": "^23.6.0",
 		"enzyme": "^3.7.0",
 		"enzyme-adapter-react-16": "^1.7.0",
@@ -13,7 +14,6 @@
 		"eslint-plugin-node": "^11.0.0",
 		"eslint-plugin-promise": "^4.2.1",
 		"eslint-plugin-standard": "^4.0.1",
-		"jest": "^23.6.0",
 		"prettier": "^1.13.7"
 	},
 	"dependencies": {
@@ -37,6 +37,7 @@
 	"scripts": {
 		"start": "react-scripts start",
 		"build": "react-scripts build",
+		"test2": "react-scripts test --env=jsdom && firebase emulator:exec --import=./test-db-seed",
 		"test": "react-scripts test --env=jsdom",
 		"eject": "react-scripts eject"
 	},
@@ -48,13 +49,5 @@
 		"trailingComma": "es5",
 		"jsxBracketSameLine": false,
 		"proseWrap": "never"
-	},
-	"jest": {
-		"setupFiles": [
-			"./src/setupTests.js"
-		],
-		"snapshotSerializers": [
-			"enzyme-to-json/serializer"
-		]
 	}
 }
