--- a/keystrokes/package.json
+++ b/keystrokes/package.json
@@ -6,6 +6,7 @@
 		"@testing-library/react": "^10.4.9",
 		"babel-jest": "^23.6.0",
 		"cypress": "^5.0.0",
+		"cypress-firebase": "^1.4.4",
 		"enzyme": "^3.7.0",
 		"enzyme-adapter-react-16": "^1.7.0",
 		"enzyme-to-json": "^3.3.4",
@@ -15,6 +16,7 @@
 		"eslint-plugin-node": "^11.0.0",
 		"eslint-plugin-promise": "^4.2.1",
 		"eslint-plugin-standard": "^4.0.1",
+		"firebase-admin": "^9.1.1",
 		"prettier": "^1.13.7"
 	},
 	"dependencies": {
