--- a/keystrokes/package.json
+++ b/keystrokes/package.json
@@ -44,7 +44,8 @@
 		"test2": "react-scripts test --env=jsdom && firebase emulators:exec --import=./test-db-seed",
 		"test": "react-scripts test --env=jsdom",
 		"eject": "react-scripts eject",
-		"cypress": "cypress open",
+		"cy": "cypress open",
+		"cypress": "cypress run",
 		"deploy": "yarn build && firebase deploy --only hosting"
 	},
 	"prettier": {
