--- a/codeship-services.yml
+++ b/codeship-services.yml
@@ -3,3 +3,5 @@ cypress-codeship-test:
     image: cypress/cypress_codeship_test
     context: ./keystrokes/
     dockerfile: Dockerfile
+  encrypted_env_file:
+    - ./keystrokes/.env.encrypted
