--- a/keystrokes/.gitignore
+++ b/keystrokes/.gitignore
@@ -15,11 +15,14 @@
 .env.development.local
 .env.test.local
 .env.production.local
+.env
 
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+serviceAccount.json
 *.log
+*.aes
 
 /cypress/videos/*
 /cypress/screenshots/*
