--- a/keystrokes/firebase.json
+++ b/keystrokes/firebase.json
@@ -13,6 +13,14 @@
 		"database": {
 			"port": 9000,
 			"host": "0.0.0.0"
+		},
+		"functions": {
+			"port": 9001,
+			"host": "0.0.0.0"
+		},
+		"hosting": {
+			"port": 9002,
+			"host": "0.0.0.0"
 		}
 	}
 }
