changed 0.0.0.0 to localhost... fixed the emulators in the docker container for some reason.

--- a/keystrokes/firebase.json
+++ b/keystrokes/firebase.json
@@ -12,7 +12,7 @@
 	"emulators": {
 		"database": {
 			"port": 9000,
-			"host": "0.0.0.0"
+			"host": "localhost"
 		},
 		"functions": {
 			"port": 9001,
