some weird bug with cypress where it fails to click the right element

--- a/keystrokes/package.json
+++ b/keystrokes/package.json
@@ -45,7 +45,8 @@
 		"test": "react-scripts test --env=jsdom",
 		"eject": "react-scripts eject",
 		"cy": "cypress open",
-		"cypress": "cypress run",
+		"cypress": "cypress run --headless",
+		"cypressHead": "cypress run",
 		"deploy": "yarn build && firebase deploy --only hosting"
 	},
 	"prettier": {
