added an environment variable to disable the tooltips for testing

--- a/keystrokes/firebase.json
+++ b/keystrokes/firebase.json
@@ -16,11 +16,11 @@
 		},
 		"functions": {
 			"port": 9001,
-			"host": "0.0.0.0"
+			"host": "localhost"
 		},
 		"hosting": {
 			"port": 9002,
-			"host": "0.0.0.0"
+			"host": "localhost"
 		}
 	}
 }
