--- a/keystrokes/package.json
+++ b/keystrokes/package.json
@@ -33,6 +33,7 @@
 		"react-dom": "^16.8.0",
 		"react-firebaseui": "^3.1.2",
 		"react-html-parser": "^2.0.2",
+		"react-joyride": "^2.2.1",
 		"react-quill": "^1.3.3",
 		"react-router-dom": "^5.0.1",
 		"react-routes": "^0.2.6",
